--- a/templates/aboutthis.html
+++ b/templates/aboutthis.html
@@ -30,7 +30,7 @@
                         <li>
                             &nbsp&nbsp&nbsp&nbsp<b>view_counts Table</b>
                             <p>Entries are inserted to this when the user clicks to view a Wikipedia or Youtube link. This seemed to be the easiest bit of data that I could create some graphs with.</p>
-                            <p>This table is only maintaining 7 days worth of data. The Python class for the 'Data Visualization' graphs will perform the delete every time it is instantiated.</p>
+                            <p>This table is only maintaining 7 days worth of data. The Python class for the graphs will perform the delete every time it is instantiated.</p>
                         </li>
                         <li>
                             &nbsp&nbsp&nbsp&nbsp<b>errors Table</b>
