--- a/templates/aboutthis.html
+++ b/templates/aboutthis.html
@@ -11,7 +11,7 @@
             <h5 style="text-align:center"><b>High Level Items</b></h5>
             <ol style="list-style-type:disc !important;padding-left:2vw !important">
                 <li>
-                    <b>RESTful APIs</b>
+                    <b>Wikipedia/Youtube APIs</b>
                     <p>I set up API keys in the Wikipedia and Google API sites to enable connectivity.</p>
                     <p>Wikipedia APIs require an additional step to get an authentication token based on the API key (Curl command run through Python subprocess/check_output).  These tokens expire after 3 hours, I think, but I retrieve them every time.</p>
                     <p>The Python requests module is used to retrieve the json data from the sources</p>
