--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
     <header class="hero">
         <div class="container">
             <div class="row">
-                <div class="col-md-6 col-md-offset-6 col-xs-12 col-xs-offset-2">
+                <div class="col-md-12 col-xs-12">
                     <ul class="main-nav">
                         <li><a href="{{url_for('index')}}">Home</a></li>
                         <li><a href="{{url_for('aboutme')}}">About Me</a></li>
@@ -27,10 +27,13 @@
                         <li><a href="{{url_for('comments')}}">Feedback</a></li>
                         <li><a href="http://www.linkedin.com/in/doug-mcintosh" target="_blank">Contact</a></li>
                     </ul>
-                    <div>
-                        <h2 class="col-md-6 col-md-pull-4">Doug McIntosh  Seattle, WA</h2>
-                    </div>
+                    <!--<div>
+                        <h2 class="col-md-12 col-xs-12">Doug McIntosh  Seattle, WA</h2>
+                    </div>-->
                 </div>
+            </div>
+            <div class="row">
+                <h2 style="text-align:center">Doug McIntosh  Seattle, WA</h2>
             </div>
         </div>
     </header>
