--- a/templates/comments.html
+++ b/templates/comments.html
@@ -3,15 +3,13 @@
 <section style="justify-content:center;margin-left:1vw;margin-right:1vw;width:100vw">
     <h3 style="text-align:center">Any feedback is appreciated.</h3>
     <h6 style="text-align:center"> or just say 'Hi' to let me know you came here</h6>
-    <div style="justify-content:center;vertical-align:top;align-items:center">
-        <form id="search" style="margin-top:1vh;margin-bottom:1vh;display:flex" action="{{ url_for('comments') }}" method="post">
-            <div style="margin-right:1vw">
-                <label for="user_email">Name/Email(optional):</label>
-                <input id="user_email" type="text" name="user_email">
-            </div>
+    <div style="justify-content:center;vertical-align:top;align-items:center;margin-right:1%">
+        <form id="search" style="margin-top:1%;margin-bottom:1%;display:flex" action="{{ url_for('comments') }}" method="post">
+            <label for="user_email">Name/Email(optional):</label>
+            <input id="user_email" type="text" style="height:10%;margin-right:1%" name="user_email">
             <label for="comments">comments: </label>
-            <textarea id="comments" style="width:50vw;margin-right:1vw;margin-left:1vw" type="text" rows="5" name="comments"></textarea>
-            <input style="height:5vh;width:5vw" type="submit" value="Send" />
+            <textarea id="comments" style="width:50%;margin-right:1%" type="text" rows="5" name="comments"></textarea>
+            <input type="submit" style="width:10%;height:10%" value="Send" />
         </form>
     </div>
 </section>
