--- a/templates/wiki_search.html
+++ b/templates/wiki_search.html
@@ -5,7 +5,6 @@
     <form id="search" style="align-items:center;text-align:center;margin-top:1vh;margin-bottom:1vh" action="{{ url_for('wiki_search_results') }}" method="post">
         <label for="search">Search Wikipedia:</label>
         <input id="search" type="text" name="search_button">
-        <input type="submit" />
         <label for="pages"># of pages</label>
         <select id="pages" name="pages">
             <!--This freaks out for anything more than 100 pages and I don't feel like dealing with it now-->
@@ -13,6 +12,7 @@
             <option value="{{myrange}}">{{myrange}}</option>
             {% endfor %}
         </select>
+        <input type="submit" value="Search" />
     </form>
     <!-- This will work if un-commented.  the code is all there-->
     <!--<form style="margin-left:25px" id="delete_db" action="{{ url_for('delete_db')}}" method="post">
@@ -103,13 +103,17 @@
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="static/js/bootstrap.js"></script>
     <script type="text/javascript">
-    if ("{{content.SHOW_INTRO}}" && !"{{content.errors}}") {
-            var intro_text = document.getElementById('intro_text');
+        var intro_text = document.getElementById('intro_text');
+        if ("{{content.SHOW_INTRO}}" && !"{{content.errors}}") {
+            
             var close_btn = document.getElementById('intro_close');
             close_btn.onclick = function () {
                 intro_text.style.display = 'none';
             };
             intro_text.style.display = 'block';
+        }
+        else {
+            intro_text.style.display = 'none';
         }
         function add_view_count(url, video_id, type) {
             //alert("calling add_video_count url: " + url + ' video id: ' + video_id + " type: " + type)
