lots.  Handle multiple databases. added navigation bar. new db site.db for traffic/comments.  still need to make errors go to that one

--- a/templates/aboutme.html
+++ b/templates/aboutme.html
@@ -2,6 +2,7 @@
 
 {% block title %}Doug McIntosh About Me{% endblock %}
 {% block content %}
+{% include 'nav_bar.html' %}
 <div style="height:70vh;overflow-y:scroll">
     <h2 style="text-align:center">A few brief words about Me </h2>
     <h5 style="text-align:center"><a style="align-items:center;text-align:center" href="http://www.linkedin.com/in/doug-mcintosh" target="_blank">My LinkedIn Profile</a></h5>
