--- a/templates/comments.html
+++ b/templates/comments.html
@@ -1,5 +1,6 @@
 {% extends "index.html" %}
 {% block content %}
+{% include 'nav_bar.html' %}
 <section style="justify-content:center;margin-left:1vw;margin-right:1vw;width:100vw">
     <h3 style="text-align:center">Any feedback is appreciated.</h3>
     <h6 style="text-align:center"> or just say 'Hi' to let me know you came here</h6>
