--- a/templates/data_analysis.html
+++ b/templates/data_analysis.html
@@ -3,7 +3,8 @@
 {% block title %}Doug McIntosh Graphs{% endblock %}
 <div style="width:100vw;height:2vh;background-color:#37324b"></div>
 {% block content %}
-<h5 style="text-align:center">Python Matplotlib Graphs</h5>
+{% include 'nav_bar.html' %}
+<h6 style="text-align:center">Python Matplotlib graphs</h6>
 <!--<form id="search" style="align-items:center;text-align:center;margin-top:1vh;margin-bottom:1vh" action="{{ url_for('data_analysis') }}" method="post">
    <label for=""topic">Create Graph for a Topic</label>
    <select id="topic" name="topics">
@@ -35,10 +36,14 @@
             <input type="submit" onclick="open_video_list();" value="Video List" />
         </div>
         {% endif %}
-        <div id="{{each_graph}}" style="height: 65vh; overflow-y: scroll">
+        <div id="{{each_graph}}" style="height: 60vh; overflow-y: scroll">
             <img src="data:image/png;base64,{{each_graph['bytes']}}" />
         </div>
         {% endfor %}
+        {% else %}
+          {% if content.no_data %}
+            <h4 style="text-align:center">{{content.no_data}}</h4>
+          {% endif %}
         {% endif %}
     </div>
 </section>
