--- a/templates/wiki_search_results.html
+++ b/templates/wiki_search_results.html
@@ -11,7 +11,7 @@
         <div style="margin-bottom:1vh;text-align:center;margin-top:1vh">
             <h4>Wikipedia search: {{content.search_text}} <input type="submit" value="Save to Database" /></h4>
         </div>
-        <div id="myData" style="width:100vw;margin-bottom:3vh;align-items:center;justify-content:center">
+        <div id="myData" style="width:100vw;height:55vh;overflow-y:scroll;margin-bottom:3vh;align-items:center;justify-content:center">
             <div id="table-wrapper">
                 <div id="table-scroll">
                     <table>
