--- a/templates/index.html
+++ b/templates/index.html
@@ -48,7 +48,7 @@
                     <div class="swiper-container client-swiper">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide client-box">
-                                <h3 class="text-left"><a href="{{url_for('wiki_search')}}">Wiki/Youtube Library</a></h3>
+                                <h3 class="text-left"><a href="{{url_for('wiki_search')}}">Wiki/Youtube Libraries</a></h3>
                             </div>
                             <div class="swiper-slide client-box">
                                 <h3 class="text-left"><a href="{{url_for('data_analysis')}}">Graphs</a></h3>
@@ -57,16 +57,13 @@
                                 <h3 class="text-left"><a href="{{url_for('site_traffic')}}">Site Traffic</a></h3>
                             </div>
                             <div class="swiper-slide client-box">
-                                <h3 class="text-left"><a href="{{url_for('blank')}}">any other</a></h3>
+                                <h3 class="text-left"><a href="{{url_for('blank')}}">something else</a></h3>
                             </div>
                             <div class="swiper-slide client-box">
-                                <h3 class="text-left"><a href="{{url_for('blank')}}">ideas</a></h3>
+                                <h3 class="text-left"><a href="{{url_for('blank')}}">and</a></h3>
                             </div>
                             <div class="swiper-slide client-box">
-                                <h3 class="text-left"><a href="{{url_for('blank')}}">are</a></h3>
-                            </div>
-                            <div class="swiper-slide client-box">
-                                <h3 class="text-left"><a href="{{url_for('blank')}}">appreciated</a></h3>
+                                <h3 class="text-left"><a href="{{url_for('blank')}}">something else</a></h3>
                             </div>
                         </div>
                     </div>
@@ -124,6 +121,7 @@
         $('#menu-toggle').click(function () {
             $(this).toggleClass('open'),
                 $('.main-nav').toggleClass('show-it');
-        })</script>
+        })
+    </script>
 </body>
 </html>
