--- a/templates/site_traffic.html
+++ b/templates/site_traffic.html
@@ -2,19 +2,20 @@
 {% block content %}
 {% endblock content %}
 {% block search_results %}
-<section style="width:100vw;display:flex">
-    <div id="outer_container" style="width:100vw;height:65vh;overflow-y:scroll;margin-left:1vw;margin-right:1vw">
-        <h5 style="text-align: center;">Flask route activities (routes defined for this site in main.py)</h5>
+{% include 'nav_bar.html' %}
+<section style="width:100vw">
+    <h6 style="text-align:center">Site Traffic Page</h6>
+    <div id="outer_container" style="width:100vw;height:62vh;overflow-y:scroll;margin-left:1vw;margin-right:1vw">
         {% if content.routes %}
-         {% for k in content.routes.keys()|sort %}
-           <div id="{{k}}" style="border:1px solid black"></div>
-         {% endfor %}
+        {% for k in content.routes.keys()|sort %}
+        <div id="{{k}}" style="border:1px solid black"></div>
+        {% endfor %}
         {% endif %}
     </div>
     {% include 'error_modal.html' %}
-      <script src="https://www.gstatic.com/charts/loader.js"></script>
-      <script src="https://js.pusher.com/8.3.0/pusher.min.js"></script>
-      <script type="text/javascript">
+    <script src="https://www.gstatic.com/charts/loader.js"></script>
+    <script src="https://js.pusher.com/8.3.0/pusher.min.js"></script>
+    <script type="text/javascript">
           var my_routes = {{ content.routes | tojson }};
           var init_data = {{ content.data | tojson }};
           const time_ticks_dict = {};
@@ -86,7 +87,7 @@
           function show_chart(route) {
 
               google.charts.load("current", { packages: ["corechart"] });
-              
+
               google.charts.setOnLoadCallback(() => {
                   // Instead of hard-coding the initial table data,
                   // you could fetch it from your server.
@@ -141,6 +142,6 @@
                   });
               });
           }
-      </script>
+    </script>
 </section>
 {% endblock search_results %}
