--- a/templates/wiki_search.html
+++ b/templates/wiki_search.html
@@ -2,26 +2,19 @@
 {% block title %}Doug McIntosh Library{% endblock %}
 {% block content %}
 <section>
-    <form id="search" style="align-items:center;text-align:center;margin-top:1vh;margin-bottom:1vh" action="{{ url_for('wiki_search_results') }}" method="post">
-        <label for="search">Search Wikipedia:</label>
-        <input id="search" type="text" name="search_button">
-        <label for="pages"># of pages</label>
-        <select id="pages" name="pages">
-            <!--This freaks out for anything more than 100 pages and I don't feel like dealing with it now-->
-            {% for myrange in range(5,101,5) %}
-            <option value="{{myrange}}">{{myrange}}</option>
-            {% endfor %}
-        </select>
-        <input type="submit" value="Search" />
-    </form>
-    <!-- This will work if un-commented.  the code is all there-->
-    <!--<form style="margin-left:25px" id="delete_db" action="{{ url_for('delete_db')}}" method="post">
-        <input type="submit" id="delete" value="Delete Database/Start Over?"/>
-    </form>-->
+        {% include 'nav_bar.html' %}
+        <!--{% if content.show_delete_db %}
+        <form style="margin-left:25px" id="delete_db" action="{{ url_for('delete_db')}}" method="post">
+            <input type="submit" id="delete" value="Delete Library?"/>
+        </form>
+        {% endif %}-->
 </section>
 {% endblock content %}
 {% block search_results %}
+<h6 style="text-align:center">Library Search Page</h6>
 <section id="myData" style="height:65vh;overflow-y:scroll;width:100vw;display:flex">
+    {% include 'intro_modal.html' %}
+    {% include 'choose_library_modal.html' %}
     {% if content.db_data %}
     <div class="left-side-column">
         {% for k in content.db_data.keys() %}
@@ -31,7 +24,6 @@
         {% endfor %}
     </div>
     {% include 'error_modal.html' %}
-    {% include 'intro_modal.html' %}
     <div style="width:80vw">
         <div id="table-wrapper">
             <div id="table-scroll">
@@ -94,26 +86,25 @@
                 </table>
             </div>
         </div>
-        {% else %}
-        <h5 style="text-align:center">
+        <!--<h5 style="text-align:center">
             Database is currently empty.  Enter a search term into the text box and choose which items you would like to save.
-        </h5>
+        </h5>-->
         {% endif %}
     </div>
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="static/js/bootstrap.js"></script>
     <script type="text/javascript">
-        var intro_text = document.getElementById('intro_text');
-        if ("{{content.SHOW_INTRO}}" && !"{{content.errors}}") {
-            
-            var close_btn = document.getElementById('intro_close');
+        var choose_text = document.getElementById('choose_library_text');
+        if ("{{content.CHOOSE_LIBRARY}}" && !"{{content.errors}}") {
+
+            var close_btn = document.getElementById('choose_close');
             close_btn.onclick = function () {
-                intro_text.style.display = 'none';
+                choose_text.style.display = 'none';
             };
-            intro_text.style.display = 'block';
+            choose_text.style.display = 'block';
         }
         else {
-            intro_text.style.display = 'none';
+            choose_text.style.display = 'none';
         }
         function add_view_count(url, video_id, type) {
             //alert("calling add_video_count url: " + url + ' video id: ' + video_id + " type: " + type)
