--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
     </header>
     <div style="width:100vw;height:2vh;background-color:#37324b"></div>
     {% block content %}
-    <section style="height:60vh">
+    <section style="vertical-align:middle">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 col-xs-12">
